Apply translation memory

--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-smallrye-openapi-small-rye-open-api-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-smallrye-openapi-small-rye-open-api-config.adoc.po
@@ -116,13 +116,13 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-smallrye-openapi-small-rye-open-api-config.adoc:35
 #, no-wrap
 msgid "boolean"
-msgstr ""
+msgstr "boolean"
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-smallrye-openapi-small-rye-open-api-config.adoc:38
 #, no-wrap
 msgid "`false`"
-msgstr ""
+msgstr "`false`"
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-smallrye-openapi-small-rye-open-api-config.adoc:43
