Update .po files

--- a/l10n/po/ja_JP/_generated-config/latest/config/quarkus-test-dev-testing-test-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/latest/config/quarkus-test-dev-testing-test-config.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-06-30 15:08+0000\n"
+"POT-Creation-Date: 2021-07-01 12:08+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -172,13 +172,13 @@ msgstr ""
 #. type: Table
 #: upstream/_generated-config/latest/config/quarkus-test-dev-testing-test-config.adoc:62
 #, no-wrap
-msgid "`.*\\.IT[^.]"
+msgid "`.*\\.IT[^.]+\\"
 msgstr ""
 
 #. type: Table
 #: upstream/_generated-config/latest/config/quarkus-test-dev-testing-test-config.adoc:62
 #, no-wrap
-msgid ".*IT"
+msgid ".*IT\\"
 msgstr ""
 
 #. type: Table
