Correct blog entries break up

--- a/l10n/po/ja_JP/_posts/2021-06-22-abraxas-customer-story.adoc.po
+++ b/l10n/po/ja_JP/_posts/2021-06-22-abraxas-customer-story.adoc.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: 2021-06-25 10:08+0000\n"
-"PO-Revision-Date: 2021-06-25 16:43+0900\n"
+"PO-Revision-Date: 2021-07-01 21:40+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: ja\n"
@@ -35,7 +35,7 @@ msgid ""
 "---\n"
 msgstr ""
 "layout: post\n"
-"title: \"Java \"と \"税金\"。開発者の人生で確実な2つのこと\"\n"
+"title: \"Javaと 税金: 開発者の人生で確実な2つのこと\"\n"
 "date: 2021-06-22\n"
 "tags: user-story\n"
 "synopsis: Abraxas社が最先端の税務アプリにQuarkusを採用\n"
