--- a/l10n/po/ja_JP/_posts/2021-06-08-quarkus-deploys-apps-on-openshift.adoc.po
+++ b/l10n/po/ja_JP/_posts/2021-06-08-quarkus-deploys-apps-on-openshift.adoc.po
@@ -3,24 +3,24 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "POT-Creation-Date: 2021-06-25 08:10+0000\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2021-07-01 22:18+0900\n"
+"Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"X-Generator: Poedit 2.4.2\n"
 
 #. type: Plain text
 #: upstream/_posts/2021-06-08-quarkus-deploys-apps-on-openshift.adoc:1
 #, no-wrap
 msgid "---\n"
-msgstr "—\n"
+msgstr "---\n"
 
 #. type: Plain text
 #: upstream/_posts/2021-06-08-quarkus-deploys-apps-on-openshift.adoc:8
