--- a/l10n/po/ja_JP/_posts/2021-06-30-quarkus-2-0-0-final-released.adoc.po
+++ b/l10n/po/ja_JP/_posts/2021-06-30-quarkus-2-0-0-final-released.adoc.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: 2021-06-30 15:04+0000\n"
-"PO-Revision-Date: 2021-07-01 21:18+0900\n"
+"PO-Revision-Date: 2021-07-01 22:17+0900\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -36,7 +36,7 @@ msgid ""
 "---\n"
 msgstr ""
 "layout: post\n"
-"title: 'Quarkus 2.0.0.Finalリリース - Vert.x 4、MicroProfile 4、継続的テストなど多数\n"
+"title: 'Quarkus 2.0.0.Finalリリース - Vert.x 4、MicroProfile 4、継続的テストなど多数'\n"
 "date: 2021-06-30\n"
 "tags: release\n"
 "synopsis: '待ちに待ったものがついに来ました: すべての機能を備えたQuarkus 2.0.0.Finalです。'\n"
