Apply translation memory

--- a/l10n/po/ja_JP/_data/guides-latest.yaml.po
+++ b/l10n/po/ja_JP/_data/guides-latest.yaml.po
@@ -354,7 +354,7 @@ msgstr ""
 #: >categories>>guides>
 #, no-wrap
 msgid "Continuous Testing"
-msgstr ""
+msgstr "継続的テスト"
 
 #. type: Hash Value - Key: url
 #: >categories>>guides>
