--- a/l10n/po/ja_JP/_generated-config/config/quarkus-all-build-items.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/config/quarkus-all-build-items.adoc.po
@@ -2069,7 +2069,7 @@ msgstr ""
 #: upstream/_generated-config/config/quarkus-all-build-items.adoc:607
 #, no-wrap
 msgid "Cache"
-msgstr ""
+msgstr "Cache"
 
 #. type: Table
 #: upstream/_generated-config/config/quarkus-all-build-items.adoc:612
