--- a/l10n/po/ja_JP/_generated-config/latest/config/quarkus-all-build-items.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/latest/config/quarkus-all-build-items.adoc.po
@@ -2268,7 +2268,7 @@ msgstr ""
 #: upstream/_generated-config/latest/config/quarkus-all-build-items.adoc:669
 #, no-wrap
 msgid "Cache"
-msgstr ""
+msgstr "Cache"
 
 #. type: Table
 #: upstream/_generated-config/latest/config/quarkus-all-build-items.adoc:674
