--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-all-build-items.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-all-build-items.adoc.po
@@ -2282,7 +2282,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-all-build-items.adoc:672
 #, no-wrap
 msgid "Cache"
-msgstr ""
+msgstr "Cache"
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-all-build-items.adoc:677
