--- a/l10n/po/ja_JP/_includes/homepage-hero-Q2release-band.html.po
+++ b/l10n/po/ja_JP/_includes/homepage-hero-Q2release-band.html.po
@@ -39,4 +39,4 @@ msgstr ""
 #. type: Content of: <div><div>
 #: upstream/_includes/homepage-hero-Q2release-band.html:10
 msgid "<a href=\"#\" class=\"scroll-down\" address=\"true\"></a>"
-msgstr ""
+msgstr "<a href=\"#\" class=\"scroll-down\" address=\"true\"></a>"
