--- a/l10n/po/ja_JP/_layouts/quarkus2.html.po
+++ b/l10n/po/ja_JP/_layouts/quarkus2.html.po
@@ -24,7 +24,7 @@ msgstr ""
 #. type: Content of: <div><div><div><div><h3>
 #: upstream/_layouts/quarkus2.html:9
 msgid "Quarkus 2.0 continues the mission of making Java the preferred framework for Kubernetes-native development with new developer tools and improved performance."
-msgstr ""
+msgstr "Quarkus 2.0は、新しい開発者ツールと改善されたパフォーマンスにより、JavaをKubernetesネイティブ開発に適したフレームワークにするという使命を継続します。"
 
 #. type: Content of: <div><div><div><div><div><div><h2>
 #: upstream/_layouts/quarkus2.html:19
@@ -109,7 +109,7 @@ msgstr ""
 #. type: Content of: <div><div><div><div><h2>
 #: upstream/_layouts/quarkus2.html:99
 msgid "Contributors"
-msgstr ""
+msgstr "コントリビューター"
 
 #. type: Content of: <div><div><div><div><p>
 #: upstream/_layouts/quarkus2.html:100
