--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-console-console-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-console-console-config.adoc.po
@@ -31,13 +31,13 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-console-console-config.adoc:9
 #, no-wrap
 msgid "Type"
-msgstr ""
+msgstr "タイプ"
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-console-console-config.adoc:11
 #, no-wrap
 msgid "Default"
-msgstr ""
+msgstr "デフォルト"
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-console-console-config.adoc:16
@@ -58,13 +58,13 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-console-console-config.adoc:44
 #, no-wrap
 msgid "boolean"
-msgstr ""
+msgstr "boolean"
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-console-console-config.adoc:20
 #, no-wrap
 msgid "`true`"
-msgstr ""
+msgstr "`true`"
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-console-console-config.adoc:25
@@ -84,7 +84,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-console-console-config.adoc:46
 #, no-wrap
 msgid "`false`"
-msgstr ""
+msgstr "`false`"
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-console-console-config.adoc:34
