Update .po files

--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-qute.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-qute.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-06-25 02:21+0000\n"
+"POT-Creation-Date: 2021-07-04 02:13+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -91,8 +91,8 @@ msgid ""
 "\n"
 "[.description]\n"
 "--\n"
-"The strategy used if a property is not found when evaluating a standalone expression at runtime. \n"
-" This strategy is not used when evaluating an expression that is used in a section parameter, e.g. `++{#++if foo.name++}++`. In such case, it's the responsibility of the section to handle this situation appropriately. \n"
+"The strategy used when a standalone expression evaluates to a \"not found\" value at runtime and the `io.quarkus.qute.strict-rendering` config property is set to `false` \n"
+" This strategy is never used when evaluating section parameters, e.g. `++{#++if foo.name++}++`. In such case, it's the responsibility of the section to handle this situation appropriately. \n"
 " By default, the `NOT_FOUND` constant is written to the output. However, in the development mode the `PropertyNotFoundStrategy++#++THROW_EXCEPTION` is used by default, i.e. when the strategy is not specified.\n"
 "--"
 msgstr ""
@@ -117,18 +117,33 @@ msgstr ""
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-qute.adoc:53
+#: upstream/_generated-config/main/config/quarkus-qute.adoc:63
 #, no-wrap
 msgid "boolean"
 msgstr "boolean"
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-qute.adoc:56
+#: upstream/_generated-config/main/config/quarkus-qute.adoc:66
 #, no-wrap
 msgid "`true`"
 msgstr "`true`"
 
 #. type: Table
-#: upstream/_generated-config/main/config/quarkus-qute.adoc:61
+#: upstream/_generated-config/main/config/quarkus-qute.adoc:62
+#, no-wrap
+msgid ""
+"[[quarkus-qute_quarkus.qute.strict-rendering]]`link:#quarkus-qute_quarkus.qute.strict-rendering[quarkus.qute.strict-rendering]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"If set to `true` then any expression that is evaluated to a `Results.NotFound` value will always result in a `TemplateException` and the rendering is aborted. \n"
+" Note that the `quarkus.qute.property-not-found-strategy` config property is completely ignored if strict rendering is enabled.\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-qute.adoc:71
 #, no-wrap
 msgid ""
 "icon:lock[title=Fixed at build time] [[quarkus-qute_quarkus.qute.content-types-content-types]]`link:#quarkus-qute_quarkus.qute.content-types-content-types[quarkus.qute.content-types]`\n"
@@ -140,7 +155,7 @@ msgid ""
 msgstr ""
 
 #. type: Table
-#: upstream/_generated-config/main/config/quarkus-qute.adoc:62
+#: upstream/_generated-config/main/config/quarkus-qute.adoc:72
 #, no-wrap
 msgid "`Map<String,String>`"
 msgstr ""
