--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-redis-redis-build-time-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-redis-redis-build-time-config.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-05-11 02:53+0000\n"
+"POT-Creation-Date: 2021-07-04 02:13+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -54,7 +54,9 @@ msgstr ""
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-redis-redis-build-time-config.adoc:17
 #: upstream/_generated-config/main/config/quarkus-redis-redis-build-time-config.adoc:27
-#: upstream/_generated-config/main/config/quarkus-redis-redis-build-time-config.adoc:56
+#: upstream/_generated-config/main/config/quarkus-redis-redis-build-time-config.adoc:57
+#: upstream/_generated-config/main/config/quarkus-redis-redis-build-time-config.adoc:77
+#: upstream/_generated-config/main/config/quarkus-redis-redis-build-time-config.adoc:107
 #, no-wrap
 msgid "boolean"
 msgstr "boolean"
@@ -62,7 +64,9 @@ msgstr "boolean"
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-redis-redis-build-time-config.adoc:20
 #: upstream/_generated-config/main/config/quarkus-redis-redis-build-time-config.adoc:30
-#: upstream/_generated-config/main/config/quarkus-redis-redis-build-time-config.adoc:59
+#: upstream/_generated-config/main/config/quarkus-redis-redis-build-time-config.adoc:60
+#: upstream/_generated-config/main/config/quarkus-redis-redis-build-time-config.adoc:80
+#: upstream/_generated-config/main/config/quarkus-redis-redis-build-time-config.adoc:110
 #, no-wrap
 msgid "`true`"
 msgstr "`true`"
@@ -94,7 +98,9 @@ msgstr ""
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-redis-redis-build-time-config.adoc:36
-#: upstream/_generated-config/main/config/quarkus-redis-redis-build-time-config.adoc:65
+#: upstream/_generated-config/main/config/quarkus-redis-redis-build-time-config.adoc:67
+#: upstream/_generated-config/main/config/quarkus-redis-redis-build-time-config.adoc:86
+#: upstream/_generated-config/main/config/quarkus-redis-redis-build-time-config.adoc:117
 #, no-wrap
 msgid "string"
 msgstr "string"
@@ -114,13 +120,47 @@ msgstr ""
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-redis-redis-build-time-config.adoc:46
-#: upstream/_generated-config/main/config/quarkus-redis-redis-build-time-config.adoc:75
+#: upstream/_generated-config/main/config/quarkus-redis-redis-build-time-config.adoc:96
 #, no-wrap
 msgid "int"
 msgstr "int"
 
 #. type: Table
-#: upstream/_generated-config/main/config/quarkus-redis-redis-build-time-config.adoc:55
+#: upstream/_generated-config/main/config/quarkus-redis-redis-build-time-config.adoc:56
+#, no-wrap
+msgid ""
+"icon:lock[title=Fixed at build time] [[quarkus-redis-redis-build-time-config_quarkus.redis.devservices.shared]]`link:#quarkus-redis-redis-build-time-config_quarkus.redis.devservices.shared[quarkus.redis.devservices.shared]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"Indicates if the Redis server managed by Quarkus Dev Services is shared. When shared, Quarkus looks for running containers using label-based service discovery. If a matching container is found, it is used, and so a second one is not started. Otherwise, Dev Services for Redis starts a new container. \n"
+" The discovery uses the `quarkus-dev-service-redis` label. The value is configured using the `service-name` property. \n"
+" Container sharing is only used in dev mode.\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-redis-redis-build-time-config.adoc:66
+#, no-wrap
+msgid ""
+"icon:lock[title=Fixed at build time] [[quarkus-redis-redis-build-time-config_quarkus.redis.devservices.service-name]]`link:#quarkus-redis-redis-build-time-config_quarkus.redis.devservices.service-name[quarkus.redis.devservices.service-name]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"The value of the `quarkus-dev-service-redis` label attached to the started container. This property is used when `shared` is set to `true`. In this case, before starting a container, Dev Services for Redis looks for a container with the `quarkus-dev-service-redis` label set to the configured value. If found, it will use this container instead of starting a new one. Otherwise it starts a new container with the `quarkus-dev-service-redis` label set to the specified value. \n"
+" This property is used when you need multiple shared Redis servers.\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-redis-redis-build-time-config.adoc:70
+#: upstream/_generated-config/main/config/quarkus-redis-redis-build-time-config.adoc:119
+#, no-wrap
+msgid "`redis`"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-redis-redis-build-time-config.adoc:76
 #, no-wrap
 msgid ""
 "icon:lock[title=Fixed at build time] [[quarkus-redis-redis-build-time-config_quarkus.redis.-additional-redis-clients-.devservices.enabled]]`link:#quarkus-redis-redis-build-time-config_quarkus.redis.-additional-redis-clients-.devservices.enabled[quarkus.redis.\"additional-redis-clients\".devservices.enabled]`\n"
@@ -133,7 +173,7 @@ msgid ""
 msgstr ""
 
 #. type: Table
-#: upstream/_generated-config/main/config/quarkus-redis-redis-build-time-config.adoc:64
+#: upstream/_generated-config/main/config/quarkus-redis-redis-build-time-config.adoc:85
 #, no-wrap
 msgid ""
 "icon:lock[title=Fixed at build time] [[quarkus-redis-redis-build-time-config_quarkus.redis.-additional-redis-clients-.devservices.image-name]]`link:#quarkus-redis-redis-build-time-config_quarkus.redis.-additional-redis-clients-.devservices.image-name[quarkus.redis.\"additional-redis-clients\".devservices.image-name]`\n"
@@ -145,7 +185,7 @@ msgid ""
 msgstr ""
 
 #. type: Table
-#: upstream/_generated-config/main/config/quarkus-redis-redis-build-time-config.adoc:74
+#: upstream/_generated-config/main/config/quarkus-redis-redis-build-time-config.adoc:95
 #, no-wrap
 msgid ""
 "icon:lock[title=Fixed at build time] [[quarkus-redis-redis-build-time-config_quarkus.redis.-additional-redis-clients-.devservices.port]]`link:#quarkus-redis-redis-build-time-config_quarkus.redis.-additional-redis-clients-.devservices.port[quarkus.redis.\"additional-redis-clients\".devservices.port]`\n"
@@ -154,5 +194,32 @@ msgid ""
 "--\n"
 "Optional fixed port the dev service will listen to. \n"
 " If not defined, the port will be chosen randomly.\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-redis-redis-build-time-config.adoc:106
+#, no-wrap
+msgid ""
+"icon:lock[title=Fixed at build time] [[quarkus-redis-redis-build-time-config_quarkus.redis.-additional-redis-clients-.devservices.shared]]`link:#quarkus-redis-redis-build-time-config_quarkus.redis.-additional-redis-clients-.devservices.shared[quarkus.redis.\"additional-redis-clients\".devservices.shared]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"Indicates if the Redis server managed by Quarkus Dev Services is shared. When shared, Quarkus looks for running containers using label-based service discovery. If a matching container is found, it is used, and so a second one is not started. Otherwise, Dev Services for Redis starts a new container. \n"
+" The discovery uses the `quarkus-dev-service-redis` label. The value is configured using the `service-name` property. \n"
+" Container sharing is only used in dev mode.\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-redis-redis-build-time-config.adoc:116
+#, no-wrap
+msgid ""
+"icon:lock[title=Fixed at build time] [[quarkus-redis-redis-build-time-config_quarkus.redis.-additional-redis-clients-.devservices.service-name]]`link:#quarkus-redis-redis-build-time-config_quarkus.redis.-additional-redis-clients-.devservices.service-name[quarkus.redis.\"additional-redis-clients\".devservices.service-name]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"The value of the `quarkus-dev-service-redis` label attached to the started container. This property is used when `shared` is set to `true`. In this case, before starting a container, Dev Services for Redis looks for a container with the `quarkus-dev-service-redis` label set to the configured value. If found, it will use this container instead of starting a new one. Otherwise it starts a new container with the `quarkus-dev-service-redis` label set to the specified value. \n"
+" This property is used when you need multiple shared Redis servers.\n"
 "--"
 msgstr ""
