--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-redis-client-config-group-dev-services-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-redis-client-config-group-dev-services-config.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-05-11 02:54+0000\n"
+"POT-Creation-Date: 2021-07-04 02:13+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -54,14 +54,18 @@ msgstr ""
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-redis-client-config-group-dev-services-config.adoc:18
-#: upstream/_generated-config/main/config/quarkus-redis-client-config-group-dev-services-config.adoc:47
+#: upstream/_generated-config/main/config/quarkus-redis-client-config-group-dev-services-config.adoc:48
+#: upstream/_generated-config/main/config/quarkus-redis-client-config-group-dev-services-config.adoc:68
+#: upstream/_generated-config/main/config/quarkus-redis-client-config-group-dev-services-config.adoc:98
 #, no-wrap
 msgid "boolean"
 msgstr "boolean"
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-redis-client-config-group-dev-services-config.adoc:21
-#: upstream/_generated-config/main/config/quarkus-redis-client-config-group-dev-services-config.adoc:50
+#: upstream/_generated-config/main/config/quarkus-redis-client-config-group-dev-services-config.adoc:51
+#: upstream/_generated-config/main/config/quarkus-redis-client-config-group-dev-services-config.adoc:71
+#: upstream/_generated-config/main/config/quarkus-redis-client-config-group-dev-services-config.adoc:101
 #, no-wrap
 msgid "`true`"
 msgstr "`true`"
@@ -80,7 +84,9 @@ msgstr ""
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-redis-client-config-group-dev-services-config.adoc:27
-#: upstream/_generated-config/main/config/quarkus-redis-client-config-group-dev-services-config.adoc:56
+#: upstream/_generated-config/main/config/quarkus-redis-client-config-group-dev-services-config.adoc:58
+#: upstream/_generated-config/main/config/quarkus-redis-client-config-group-dev-services-config.adoc:77
+#: upstream/_generated-config/main/config/quarkus-redis-client-config-group-dev-services-config.adoc:108
 #, no-wrap
 msgid "string"
 msgstr "string"
@@ -100,13 +106,47 @@ msgstr ""
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-redis-client-config-group-dev-services-config.adoc:37
-#: upstream/_generated-config/main/config/quarkus-redis-client-config-group-dev-services-config.adoc:66
+#: upstream/_generated-config/main/config/quarkus-redis-client-config-group-dev-services-config.adoc:87
 #, no-wrap
 msgid "int"
 msgstr "int"
 
 #. type: Table
-#: upstream/_generated-config/main/config/quarkus-redis-client-config-group-dev-services-config.adoc:46
+#: upstream/_generated-config/main/config/quarkus-redis-client-config-group-dev-services-config.adoc:47
+#, no-wrap
+msgid ""
+"icon:lock[title=Fixed at build time] [[quarkus-redis-client-config-group-dev-services-config_quarkus.redis.devservices.shared]]`link:#quarkus-redis-client-config-group-dev-services-config_quarkus.redis.devservices.shared[quarkus.redis.devservices.shared]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"Indicates if the Redis server managed by Quarkus Dev Services is shared. When shared, Quarkus looks for running containers using label-based service discovery. If a matching container is found, it is used, and so a second one is not started. Otherwise, Dev Services for Redis starts a new container. \n"
+" The discovery uses the `quarkus-dev-service-redis` label. The value is configured using the `service-name` property. \n"
+" Container sharing is only used in dev mode.\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-redis-client-config-group-dev-services-config.adoc:57
+#, no-wrap
+msgid ""
+"icon:lock[title=Fixed at build time] [[quarkus-redis-client-config-group-dev-services-config_quarkus.redis.devservices.service-name]]`link:#quarkus-redis-client-config-group-dev-services-config_quarkus.redis.devservices.service-name[quarkus.redis.devservices.service-name]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"The value of the `quarkus-dev-service-redis` label attached to the started container. This property is used when `shared` is set to `true`. In this case, before starting a container, Dev Services for Redis looks for a container with the `quarkus-dev-service-redis` label set to the configured value. If found, it will use this container instead of starting a new one. Otherwise it starts a new container with the `quarkus-dev-service-redis` label set to the specified value. \n"
+" This property is used when you need multiple shared Redis servers.\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-redis-client-config-group-dev-services-config.adoc:61
+#: upstream/_generated-config/main/config/quarkus-redis-client-config-group-dev-services-config.adoc:110
+#, no-wrap
+msgid "`redis`"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-redis-client-config-group-dev-services-config.adoc:67
 #, no-wrap
 msgid ""
 "icon:lock[title=Fixed at build time] [[quarkus-redis-client-config-group-dev-services-config_quarkus.redis.-additional-redis-clients-.devservices.enabled]]`link:#quarkus-redis-client-config-group-dev-services-config_quarkus.redis.-additional-redis-clients-.devservices.enabled[quarkus.redis.\"additional-redis-clients\".devservices.enabled]`\n"
@@ -119,7 +159,7 @@ msgid ""
 msgstr ""
 
 #. type: Table
-#: upstream/_generated-config/main/config/quarkus-redis-client-config-group-dev-services-config.adoc:55
+#: upstream/_generated-config/main/config/quarkus-redis-client-config-group-dev-services-config.adoc:76
 #, no-wrap
 msgid ""
 "icon:lock[title=Fixed at build time] [[quarkus-redis-client-config-group-dev-services-config_quarkus.redis.-additional-redis-clients-.devservices.image-name]]`link:#quarkus-redis-client-config-group-dev-services-config_quarkus.redis.-additional-redis-clients-.devservices.image-name[quarkus.redis.\"additional-redis-clients\".devservices.image-name]`\n"
@@ -131,7 +171,7 @@ msgid ""
 msgstr ""
 
 #. type: Table
-#: upstream/_generated-config/main/config/quarkus-redis-client-config-group-dev-services-config.adoc:65
+#: upstream/_generated-config/main/config/quarkus-redis-client-config-group-dev-services-config.adoc:86
 #, no-wrap
 msgid ""
 "icon:lock[title=Fixed at build time] [[quarkus-redis-client-config-group-dev-services-config_quarkus.redis.-additional-redis-clients-.devservices.port]]`link:#quarkus-redis-client-config-group-dev-services-config_quarkus.redis.-additional-redis-clients-.devservices.port[quarkus.redis.\"additional-redis-clients\".devservices.port]`\n"
@@ -140,5 +180,32 @@ msgid ""
 "--\n"
 "Optional fixed port the dev service will listen to. \n"
 " If not defined, the port will be chosen randomly.\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-redis-client-config-group-dev-services-config.adoc:97
+#, no-wrap
+msgid ""
+"icon:lock[title=Fixed at build time] [[quarkus-redis-client-config-group-dev-services-config_quarkus.redis.-additional-redis-clients-.devservices.shared]]`link:#quarkus-redis-client-config-group-dev-services-config_quarkus.redis.-additional-redis-clients-.devservices.shared[quarkus.redis.\"additional-redis-clients\".devservices.shared]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"Indicates if the Redis server managed by Quarkus Dev Services is shared. When shared, Quarkus looks for running containers using label-based service discovery. If a matching container is found, it is used, and so a second one is not started. Otherwise, Dev Services for Redis starts a new container. \n"
+" The discovery uses the `quarkus-dev-service-redis` label. The value is configured using the `service-name` property. \n"
+" Container sharing is only used in dev mode.\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-redis-client-config-group-dev-services-config.adoc:107
+#, no-wrap
+msgid ""
+"icon:lock[title=Fixed at build time] [[quarkus-redis-client-config-group-dev-services-config_quarkus.redis.-additional-redis-clients-.devservices.service-name]]`link:#quarkus-redis-client-config-group-dev-services-config_quarkus.redis.-additional-redis-clients-.devservices.service-name[quarkus.redis.\"additional-redis-clients\".devservices.service-name]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"The value of the `quarkus-dev-service-redis` label attached to the started container. This property is used when `shared` is set to `true`. In this case, before starting a container, Dev Services for Redis looks for a container with the `quarkus-dev-service-redis` label set to the configured value. If found, it will use this container instead of starting a new one. Otherwise it starts a new container with the `quarkus-dev-service-redis` label set to the specified value. \n"
+" This property is used when you need multiple shared Redis servers.\n"
 "--"
 msgstr ""
