--- a/l10n/po/ja_JP/_versions/main/guides/smallrye-graphql-client.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/smallrye-graphql-client.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-06-12 02:17+0000\n"
+"POT-Creation-Date: 2021-07-05 02:18+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -422,7 +422,7 @@ msgstr ""
 #. type: delimited block -
 #: upstream/_versions/main/guides/smallrye-graphql-client.adoc:239
 #, no-wrap
-msgid "star-wars-typesafe/mp-graphql/url=https://swapi-graphql.netlify.app/.netlify/functions/index\n"
+msgid "quarkus.smallrye-graphql-client.star-wars-typesafe.url=https://swapi-graphql.netlify.app/.netlify/functions/index\n"
 msgstr ""
 
 #. type: Plain text
@@ -483,7 +483,7 @@ msgstr ""
 #. type: delimited block -
 #: upstream/_versions/main/guides/smallrye-graphql-client.adoc:278
 #, no-wrap
-msgid "star-wars-dynamic/mp-graphql/url=https://swapi-graphql.netlify.app/.netlify/functions/index\n"
+msgid "quarkus.smallrye-graphql-client.star-wars-dynamic.url=https://swapi-graphql.netlify.app/.netlify/functions/index\n"
 msgstr ""
 
 #. type: Plain text
@@ -499,7 +499,7 @@ msgstr ""
 #. type: delimited block -
 #: upstream/_versions/main/guides/smallrye-graphql-client.adoc:287
 #, no-wrap
-msgid "star-wars-dynamic/mp-graphql/header/HEADER-KEY=HEADER-VALUE\"\n"
+msgid "quarkus.smallrye-graphql-client.star-wars-dynamic.header.HEADER-KEY=HEADER-VALUE\"\n"
 msgstr ""
 
 #. type: Plain text
