--- a/l10n/po/ja_JP/_versions/main/guides/smallrye-graphql.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/smallrye-graphql.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-06-12 02:17+0000\n"
+"POT-Creation-Date: 2021-07-06 02:20+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -593,7 +593,9 @@ msgstr "Quarkusの `smallrye-graphql` エクステンションは、 `GraphiQL` 
 
 #. type: Plain text
 #: upstream/_versions/main/guides/smallrye-graphql.adoc:296
-msgid "GraphiQL can be accessed from http://localhost:8080/graphql-ui/ ."
+#, fuzzy
+#| msgid "GraphiQL can be accessed from http://localhost:8080/graphql-ui/ ."
+msgid "GraphiQL can be accessed from http://localhost:8080/q/graphql-ui/ ."
 msgstr "GraphiQLは、 http://localhost:8080/graphql-ui/ からアクセスできます。"
 
 #. type: Plain text
