Update .po files

--- a/l10n/po/ja_JP/_data/guides-latest.yaml.po
+++ b/l10n/po/ja_JP/_data/guides-latest.yaml.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2021-07-01 16:11+0000\n"
+"POT-Creation-Date: 2021-07-06 16:11+0000\n"
 "PO-Revision-Date: 2021-03-25 22:35+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -3236,6 +3236,13 @@ msgstr ""
 #, no-wrap
 msgid "Conditional Extension Dependencies"
 msgstr ""
+
+#. type: Hash Value - Key: url
+#: >categories>>guides>
+#, fuzzy, no-wrap
+#| msgid "/guides/writing-extensions"
+msgid "/guides/conditional-extension-dependencies"
+msgstr "/guides/writing-extensions"
 
 #. type: Hash Value - Key: description
 #: >categories>>guides>
