Update .po files

--- a/l10n/po/ja_JP/_versions/main/guides/security-jwt.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/security-jwt.adoc.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2021-06-17 02:19+0000\n"
+"POT-Creation-Date: 2021-07-07 02:19+0000\n"
 "PO-Revision-Date: 2021-05-12 14:05+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -790,7 +790,7 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_versions/main/guides/security-jwt.adoc:420
-msgid "We will use a `smallrye.jwt.sign.key-location` property to point to this private signing key."
+msgid "We will use a `smallrye.jwt.sign.key.location` property to point to this private signing key."
 msgstr ""
 
 #. type: Block title
@@ -860,7 +860,7 @@ msgstr ""
 #. type: delimited block -
 #: upstream/_versions/main/guides/security-jwt.adoc:452
 #, no-wrap
-msgid "$ mvn exec:java -Dexec.mainClass=org.acme.security.jwt.GenerateToken -Dexec.classpathScope=test -Dsmallrye.jwt.sign.key-location=privateKey.pem\n"
+msgid "$ mvn exec:java -Dexec.mainClass=org.acme.security.jwt.GenerateToken -Dexec.classpathScope=test -Dsmallrye.jwt.sign.key.location=privateKey.pem\n"
 msgstr ""
 
 #. type: delimited block -
@@ -2341,7 +2341,7 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_versions/main/guides/security-jwt.adoc:1069
-msgid "If `smallrye.jwt.sign.key-location` or/and `smallrye.jwt.encrypt.key.location` properties are set then one can secure the existing claims (resources, maps, JsonObjects) with a single call:"
+msgid "If `smallrye.jwt.sign.key.location` or/and `smallrye.jwt.encrypt.key.location` properties are set then one can secure the existing claims (resources, maps, JsonObjects) with a single call:"
 msgstr ""
 
 #. type: delimited block -
