--- a/l10n/po/ja_JP/_versions/main/guides/datasource.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/datasource.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-05-07 17:34+0000\n"
+"POT-Creation-Date: 2021-07-07 02:19+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -1457,6 +1457,13 @@ msgstr "リアクティブな MariaDB/MySQL 固有の設定"
 
 #. type: Title ===
 #: upstream/_versions/main/guides/datasource.adoc:665
+#, fuzzy, no-wrap
+#| msgid "Reactive PostgreSQL Specific Configuration"
+msgid "Reactive Microsoft SQL Server Specific Configuration"
+msgstr "リアクティブな PostgreSQL 固有の設定"
+
+#. type: Title ===
+#: upstream/_versions/main/guides/datasource.adoc:669
 #, no-wrap
 msgid "Reactive PostgreSQL Specific Configuration"
 msgstr "リアクティブな PostgreSQL 固有の設定"
