--- a/l10n/po/ja_JP/_versions/main/guides/security-openid-connect-multitenancy.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/security-openid-connect-multitenancy.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-05-07 17:34+0000\n"
+"POT-Creation-Date: 2021-07-07 02:19+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -671,8 +671,8 @@ msgstr ""
 #: upstream/_versions/main/guides/security-openid-connect-multitenancy.adoc:325
 #, no-wrap
 msgid ""
+"import io.quarkus.oidc.OidcTenantConfig;\n"
 "import io.quarkus.oidc.TenantConfigResolver;\n"
-"import io.quarkus.oidc.runtime.OidcTenantConfig;\n"
 "import io.vertx.ext.web.RoutingContext;\n"
 msgstr ""
 
