--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-datasource-data-sources-reactive-mssql-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-datasource-data-sources-reactive-mssql-config.adoc.po
@@ -32,14 +32,14 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-datasource-data-sources-reactive-mssql-config.adoc:23
 #, no-wrap
 msgid "Type"
-msgstr ""
+msgstr "タイプ"
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-datasource-data-sources-reactive-mssql-config.adoc:11
 #: upstream/_generated-config/main/config/quarkus-datasource-data-sources-reactive-mssql-config.adoc:25
 #, no-wrap
 msgid "Default"
-msgstr ""
+msgstr "デフォルト"
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-datasource-data-sources-reactive-mssql-config.adoc:16
@@ -58,7 +58,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-datasource-data-sources-reactive-mssql-config.adoc:31
 #, no-wrap
 msgid "int"
-msgstr ""
+msgstr "int"
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-datasource-data-sources-reactive-mssql-config.adoc:22
