Update .po files

--- a/l10n/po/ja_JP/_generated-config/latest/config/quarkus-container-image-jib.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/latest/config/quarkus-container-image-jib.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-03-30 14:07+0000\n"
+"POT-Creation-Date: 2021-07-07 08:09+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -57,6 +57,8 @@ msgstr ""
 #: upstream/_generated-config/latest/config/quarkus-container-image-jib.adoc:76
 #: upstream/_generated-config/latest/config/quarkus-container-image-jib.adoc:85
 #: upstream/_generated-config/latest/config/quarkus-container-image-jib.adoc:103
+#: upstream/_generated-config/latest/config/quarkus-container-image-jib.adoc:130
+#: upstream/_generated-config/latest/config/quarkus-container-image-jib.adoc:139
 #, no-wrap
 msgid "string"
 msgstr "string"
@@ -267,6 +269,42 @@ msgstr ""
 #: upstream/_generated-config/latest/config/quarkus-container-image-jib.adoc:129
 #, no-wrap
 msgid ""
+"icon:lock[title=Fixed at build time] [[quarkus-container-image-jib_quarkus.jib.image-digest-file]]`link:#quarkus-container-image-jib_quarkus.jib.image-digest-file[quarkus.jib.image-digest-file]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"The path of a file that will be written containing the digest of the generated image. If the path is relative, is writen to the output directory of the build tool\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/latest/config/quarkus-container-image-jib.adoc:133
+#, no-wrap
+msgid "`jib-image.digest`"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/latest/config/quarkus-container-image-jib.adoc:138
+#, no-wrap
+msgid ""
+"icon:lock[title=Fixed at build time] [[quarkus-container-image-jib_quarkus.jib.image-id-file]]`link:#quarkus-container-image-jib_quarkus.jib.image-id-file[quarkus.jib.image-id-file]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"The path of a file that will be written containing the id of the generated image. If the path is relative, is writen to the output directory of the build tool\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/latest/config/quarkus-container-image-jib.adoc:142
+#, no-wrap
+msgid "`jib-image.id`"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/latest/config/quarkus-container-image-jib.adoc:147
+#, no-wrap
+msgid ""
 "icon:lock[title=Fixed at build time] [[quarkus-container-image-jib_quarkus.jib.environment-variables-environment-variables]]`link:#quarkus-container-image-jib_quarkus.jib.environment-variables-environment-variables[quarkus.jib.environment-variables]`\n"
 "\n"
 "[.description]\n"
@@ -276,14 +314,14 @@ msgid ""
 msgstr ""
 
 #. type: Table
-#: upstream/_generated-config/latest/config/quarkus-container-image-jib.adoc:130
-#: upstream/_generated-config/latest/config/quarkus-container-image-jib.adoc:139
+#: upstream/_generated-config/latest/config/quarkus-container-image-jib.adoc:148
+#: upstream/_generated-config/latest/config/quarkus-container-image-jib.adoc:157
 #, no-wrap
 msgid "`Map<String,String>`"
 msgstr ""
 
 #. type: Table
-#: upstream/_generated-config/latest/config/quarkus-container-image-jib.adoc:138
+#: upstream/_generated-config/latest/config/quarkus-container-image-jib.adoc:156
 #, no-wrap
 msgid ""
 "icon:lock[title=Fixed at build time] [[quarkus-container-image-jib_quarkus.jib.labels-labels]]`link:#quarkus-container-image-jib_quarkus.jib.labels-labels[quarkus.jib.labels]`\n"
