--- a/l10n/po/ja_JP/_guides/smallrye-graphql.adoc.po
+++ b/l10n/po/ja_JP/_guides/smallrye-graphql.adoc.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2021-06-30 15:12+0000\n"
+"POT-Creation-Date: 2021-07-07 08:11+0000\n"
 "PO-Revision-Date: 2021-04-08 20:50+0900\n"
 "Last-Translator: Nobuhiro Sue <nobuhiro.sue@gmail.com>\n"
 "Language-Team: \n"
@@ -596,7 +596,9 @@ msgstr "Quarkusの `smallrye-graphql` エクステンションは、 `GraphiQL` 
 
 #. type: Plain text
 #: upstream/_guides/smallrye-graphql.adoc:296
-msgid "GraphiQL can be accessed from http://localhost:8080/graphql-ui/ ."
+#, fuzzy
+#| msgid "GraphiQL can be accessed from http://localhost:8080/graphql-ui/ ."
+msgid "GraphiQL can be accessed from http://localhost:8080/q/graphql-ui/ ."
 msgstr "GraphiQLは、 http://localhost:8080/graphql-ui/ からアクセスできます。"
 
 #. type: Plain text
