--- a/l10n/po/ja_JP/_generated-config/latest/config/quarkus-smallrye-openapi.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/latest/config/quarkus-smallrye-openapi.adoc.po
@@ -123,7 +123,7 @@ msgstr "boolean"
 #: upstream/_generated-config/latest/config/quarkus-smallrye-openapi.adoc:38
 #, no-wrap
 msgid "`false`"
-msgstr ""
+msgstr "`false`"
 
 #. type: Table
 #: upstream/_generated-config/latest/config/quarkus-smallrye-openapi.adoc:43
